change project structure